--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "date-fns": "^4.0.0-beta.1",
+    "google-map-react": "^2.2.1",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-responsive-masonry": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
