--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "date-fns": "^4.0.0-beta.1",
+    "date-fns": "^4.1.0",
     "google-map-react": "^2.2.1",
     "next": "14.2.1",
     "react": "^18",
